# SmartSOD2D

./: .gitignore  .gitmodules  LICENSE.txt  README.md  pyproject.toml  setup.py
examples/bl_rl/: README.md  job_alvis.sh  job_mn5.sh  params.py  postproc.py  run.py  run_alvis.sh  run_p9.sh  sod_env_bubble.py
examples/bl_rl/grids/: bl_coarse.geo  bl_coarse_marl3.geo  bl_fine.geo
examples/bl_rl_debug/: BLFlowSolverIncompDRL.json  job_mn5.sh  params.py  rectangleControl.txt  run.py  sod_env_bubble.py  witness.txt
examples/bl_rl_debug/sod2d_exp/: smartsim_params.txt
examples/bl_rl_debug/sod2d_exp/.smartsim/telemetry/: manifest.json
examples/cyl_rl/: BluffBodySolverIncompDRL.json  job_mn5.sh  params.py  rectangleControl.txt  run.py  sod_env_cyl.py  witness.txt
examples/cyl_rl/grids/: cyl_p4_psenv.geo
smartsod2d/: analysis.py  history.py  sod_env.py  utils.py
src/smartsod2d/: analysis.py  init_smartsim.py  sod_env.py
utils/: clean-case.sh  compile-smartredis-p9.sh  compile-sod-gcc.sh  compile-sod-mn.sh  compile-sod-nvhpc.sh  compile-sod-p9.sh  compilerOps-cc75.cmake  compilerOps.cmake  install_redisai.sh  install_smartredis.sh  install_smartsod2d.sh  kill-processes.sh  modules-alvis-gcc.sh  modules-alvis-intel.sh  modules-alvis-nvhpc.sh  modules-alvis-python-fran.sh  modules-alvis-python.sh  modules-berzelius-nvhpc.sh  modules-gcc-noconda.sh  modules-gcc.sh  modules-gmsh.sh  modules-mn-gcc.sh  modules-mn-intel.sh  modules-mn5-acc.sh  modules-nvhpc.sh  modules-p9.sh  run-mn.sh  run-p9.sh  run-sod.sh
(+4 files in other folders)
